--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Pengertian</h5>
                   <p class="card-text">Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas menjadi 1 buah chip yang dijalankan oleh program di dalamnya.</p>
-                  <a href="Pengertian.html" class="btn btn-warning">Detail</a>
+                  <a href="/Siskom/Pengertian.html" class="btn btn-warning">Detail</a>
                 </div>
               </div>
           </div>
