--- a/index.html
+++ b/index.html
@@ -20,49 +20,107 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Pengenalan Diri</a>
+              <a class="nav-link active" aria-current="page" href="#home">Pengenalan Diri</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Materi</a>
+              <a class="nav-link" href="#materi">Materi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Penutupan</a>
+              <a class="nav-link" href="#penutupan">Penutupan</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Pengenalan  -->
-    <section class="jumbotron text-center mt-5" style="padding: 2rem 1rem; background-color: #beac5b7a; font-family: 'Fuzzy Bubbles', cursive">
+    <section class="jumbotron text-center mt-5" style="padding: 2rem 1rem; background-color: #f7eec7; font-family: 'Fuzzy Bubbles', cursive">
       <h1 class="display-4">Micro Controller</h1>
       <h3>Pengenalan</h3>
       <h4>Ketua || Anggota</h4>
       <p>Robin || Peter | John | Aldwin</p>
     </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#f7eec7" fill-opacity="1" d="M0,96L0,96L288,96L288,160L576,160L576,256L864,256L864,64L1152,64L1152,160L1440,160L1440,0L1152,0L1152,0L864,0L864,0L576,0L576,0L288,0L288,0L0,0L0,0Z"></path>
+    </svg>
     <!-- Akhir Pengenalan -->
     <!-- Mulai Materi -->
     <section id="materi">
       <div class="container">
-        <div class="row text-center mb-5 p-5">
+        <div class="row text-center mb-5 p-5 justify-content-center">
           <div class="col md-5">
-            <h1>Pengertian </h1>
+            <h1>Materi</h1>
           </div>
         </div>
-        <div class="row justify-content-evenly fs-5 text-center">
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
-                <img src="https://source.unsplash.com/1200x500?Cpu" class="card-img-top" alt="...">
+        <div class="container">
+          <div class="row justify-content-center text-center mb-5 p-4">
+            <div class="col-md-4 mb-3">
+              <div class="card" style="width: 18rem">
+                <img src="https://source.unsplash.com/900x500?Cpu" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Pengertian</h5>
-                  <p class="card-text">Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas menjadi 1 buah chip yang dijalankan oleh program di dalamnya.</p>
+                  <p class="card-text">Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas ...</p>
                   <a href="/Siskom/Pengertian" class="btn btn-warning">Detail</a>
                 </div>
               </div>
+            </div>
+            <div class="col-md-4 mb-3 col-sm-12">
+              <div class="card" style="width: 18rem">
+                <img src="https://source.unsplash.com/900x500?electronics Component" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Komponen</h5>
+                  <p class="card-text">Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem.</p>
+                  <a href="/Siskom/Komponen" class="btn btn-warning">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card" style="width: 18rem">
+                <img src="https://source.unsplash.com/900x500?cpu type" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Jenis - Jenis || Fungsi</h5>
+                  <p class="card-text">Adapun jenis-jenis serta fungsi dari Mikrokontroler sebagai berikut</p>
+                  <a href="/Siskom/Jenis" class="btn btn-warning">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card" style="width: 18rem">
+                <img src="https://source.unsplash.com/900x500?electronics difference" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Perdedaan</h5>
+                  <p class="card-text">Mikrokontroler adalah perangkat pemrosesan (CPU, ROM, RAM, EEPROM, I/O) ...</p>
+                  <a href="/Siskom/Komponen" class="btn btn-warning">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card" style="width: 18rem">
+                <img src="https://source.unsplash.com/900x500?electronics excess" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Kelebihan dan Kekurangan</h5>
+                  <p class="card-text">Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem.</p>
+                  <a href="/Siskom/Komponen" class="btn btn-warning">Detail</a>
+                </div>
+              </div>
+            </div>
           </div>
+      </div>
+      </div>
+    </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#f7eec7"
+        fill-opacity="1"
+        d="M0,224L0,192L205.7,192L205.7,32L411.4,32L411.4,96L617.1,96L617.1,256L822.9,256L822.9,96L1028.6,96L1028.6,256L1234.3,256L1234.3,256L1440,256L1440,320L1234.3,320L1234.3,320L1028.6,320L1028.6,320L822.9,320L822.9,320L617.1,320L617.1,320L411.4,320L411.4,320L205.7,320L205.7,320L0,320L0,320Z"
+      ></path>
+    </svg>
+    <section id="penutupan">
+      <div class="con">
+        <div class="row-md-7 text-center fs-2 p-5" style="background-color: #f7eec7">
+          <footer>Sekian Dari Kami kelompok 1 Terima Kasih</footer>
         </div>
       </div>
     </section>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
