--- a/Komponen.html
+++ b/Komponen.html
@@ -17,27 +17,29 @@
 
     <title>Komponen</title>
   </head>
-  <body style="background-color: #f7eec7;">
-      <!-- judul -->
-    <h1 class="text-center mb-2 mt-3">Komponen</h1>
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <div class="card bg-dark text-white">
-          <div class="card-img-overlay"></div>
-        </div>
+  <body >
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning shadow-sm fixed-top  mb-5 j">
+      <div class="container " style="font-family: 'Fuzzy Bubbles', cursive">
+        <a class="navbar-brand" href="#">Komponen</a>
       </div>
-    </div>
+    </nav>
     <br>
     <!-- end -->
+
+
+
+
     <!-- Awal Komponen  -->
-    <div class="container">
+    <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div class="card bg-dark text-white">
             <img src="https://source.unsplash.com/1000x400?components electronic" class="card-img" alt="..." />
             <div class="card-img-overlay">
               <h5 class="card-title shadow sm p-2 mb-1 bg-dark p-2 dawa" style="--bs-bg-opacity: 0.3">Komponen Mikrokontroler</h5>
-              <p class="card-text card-title shadow sm p-2 mb-1 bg-dark p-2 mt-2 dewe" style="--bs-bg-opacity: 0.3">
+              <p class="card-text card-title shadow sm p-2 mb-1 bg-dark p-2 mt-2 dewe" style="--bs-bg-opacity: 0.7">
                 Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem. Struktur komponen mikrokontroler ini saling berkaitan agar dapat menerima dan menjalankan perintah program dari pengguna atau pembuatnya. Berikut
                 adalah bagian bagian dari suatu mikrokontroler
               </p>
