--- a/index.html
+++ b/index.html
@@ -59,7 +59,25 @@
                 <div class="card-body">
                   <h5 class="card-title">Pengertian</h5>
                   <p class="card-text">Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas ...</p>
-                  <a href="/Siskom/Pengertian" class="btn btn-warning">Detail</a>
+                  <div class="modal fade" id="pengertian" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalToggleLabel">Pengertian</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <h1>Apa itu Micro controler</h1>
+                          <p>Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas menjadi 1 buah chip yang dijalankan oleh program di dalamnya. Berdasarkan kutipan menurut Chamim tahun 2012, Mikrokontroler merupakan sistem komputer dimana sebagian atau seluruh elemen berada di dalam IC atau integrated circuit. Berdasarkan kutipan menurut Setiawan tahun 2011, Mikrokontroler merupakan sistem IC yang tingkat kepadatannya tinggi.
+                          </p>
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-warning" data-bs-target="#" data-bs-toggle="modal">Balik</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="btn btn-warning" data-bs-toggle="modal" href="#pengertian" role="button">detail</a>
                 </div>
               </div>
             </div>
@@ -89,7 +107,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Perdedaan</h5>
                   <p class="card-text">Mikrokontroler adalah perangkat pemrosesan (CPU, ROM, RAM, EEPROM, I/O) ...</p>
-                  <a href="/Siskom/Komponen" class="btn btn-warning">Detail</a>
+                  <a href="/Siskom/Perbedaan" class="btn btn-warning">Detail</a>
                 </div>
               </div>
             </div>
@@ -99,7 +117,64 @@
                 <div class="card-body">
                   <h5 class="card-title">Kelebihan dan Kekurangan</h5>
                   <p class="card-text">Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem.</p>
-                  <a href="/Siskom/Komponen" class="btn btn-warning">Detail</a>
+                  <div class="modal fade" id="kelebihan" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalToggleLabel">Kelebihan Kekurangan</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <div class="text-start">
+                            <br>
+                            <h3>Kelebihan</h3>
+                            <ul>
+                              <li>
+                                Pengoperasian yang sederhana dan mudah dipelajari.
+                              </li>
+                              <li>
+                                Pin mikrokontroler dapat diprogram dengan berbagai perintah
+                              </li>
+                              <li>
+                                Waktu yang dibutuhkan untuk menjalankan perintah tergolong cepat.
+                              </li>
+                              <li>
+                                Dapat digunakan secara mandiri tanpa menggunakan komponen digital tambahan.
+                              </li>
+                              <li>
+                                Hemat biaya, karena mikrokontroler memiliki kemampuan yang lengkap dan multifungsi.
+                              </li>
+                            </ul>
+                          </div>
+                          <div class="text-start">
+                            <br>
+                            <h3>Kekurangan</h3>
+                            <ul>
+                              <li>
+                                Memiliki kapasitas RAM dan ROM yang terbatas.
+                              </li>
+                              <li>
+                                Hanya dapat menerima perintah program sederhana.
+                              </li>
+                              <li>
+                                Kemampuan CPU yang rendah dalam mengolah data kompleks.
+                              </li>
+                              <li>
+                                Tidak cocok untuk menjalankan sebuah perintah dalam waktu yang bersamaan.
+                              </li>
+                              <li>
+                                Membutuhkan alat tambahan untuk menulis atau membaca program didalam mikrokontroler.
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-warning" data-bs-target="#" data-bs-toggle="modal">Balik</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="btn btn-warning" data-bs-toggle="modal" href="#kelebihan" role="button">detail</a>
                 </div>
               </div>
             </div>
