--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -109,9 +109,11 @@
                     <p class="fs-3">Kecepatan Proses Mikrokontroler saat ini berkisar antara 1 Mhz - 300 Mhz, sedangkan Mikroprosesor, kecepatannya berada pada 1Ghz - 4Ghz. Kecepatan proses ini akan terus berkembang seiring berkembang pesatnya teknologi SoC (System On Chip).
                     </p>
                 </div>
-                <div class="col-md-6 p-3 ">
-                    <img src="images/gc.svg" alt="" style="max-width: 100%;">
-                </div>
+                    <div class="col-md-6 p-3 ">
+                        <a href="Siskom/index.html">
+                            <img src="images/gc.svg" alt="" style="max-width: 100%;">
+                        </a>
+                    </div>
             </div>
         </div>
     </section>
