--- a/Komponen.html
+++ b/Komponen.html
@@ -4,14 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-        .dewe{
-            font-size: 50%;
-        }
-        .dawa{
-            font-size: 100%;
-        }
-    </style>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
@@ -35,15 +28,35 @@
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <div class="card bg-dark text-white">
+          <div class="card bg-light text-dark ">
             <img src="https://source.unsplash.com/1000x400?components electronic" class="card-img" alt="..." />
-            <div class="card-img-overlay">
-              <h5 class="card-title shadow sm p-2 mb-1 bg-dark p-2 dawa" style="--bs-bg-opacity: 0.3">Komponen Mikrokontroler</h5>
-              <p class="card-text card-title shadow sm p-2 mb-1 bg-dark p-2 mt-2 dewe" style="--bs-bg-opacity: 0.7">
-                Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem. Struktur komponen mikrokontroler ini saling berkaitan agar dapat menerima dan menjalankan perintah program dari pengguna atau pembuatnya. Berikut
-                adalah bagian bagian dari suatu mikrokontroler
-              </p>
-            </div>
+            <div class="card-img-overlay ">
+              <h1 class="card-title shadow sm p-2 mb-1 bg-dark p-2 " style="--bs-bg-opacity: 0.3">Komponen Mikrokontroler</h1>
+                  <div class="modal fade" id="komponen" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalToggleLabel">Komponen</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <h1>Apa saja komponen dalam Micro controller</h1>
+                          <p>Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem. Struktur komponen mikrokontroler ini saling berkaitan agar dapat menerima dan menjalankan perintah program dari pengguna atau pembuatnya. Berikut
+                            adalah bagian bagian dari suatu mikrokontroler
+                          </p>
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-warning" data-bs-target="#" data-bs-toggle="modal">Balik</button>
+                          
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <a href="Siskom/index.html" class="btn btn-outline-warning shadow" style="background-color: rgba(0, 0, 0, 0.329);">Balik</a>
+                    <a class="btn btn-outline-warning shadow" data-bs-toggle="modal" href="#komponen" role="button" style="background-color: rgba(0, 0, 0, 0.329);">detail</a>
+                </div>
+              </div>
           </div>
         </div>
       </div>
@@ -55,7 +68,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?cpu" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -65,7 +78,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?computer RAM" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -75,7 +88,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?Port computer" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -85,7 +98,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?timer computer" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -95,7 +108,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?computer Port " class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -105,7 +118,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img
                   src="https://source.unsplash.com/1200x500?Special computer
@@ -120,7 +133,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?computer Interrupt Control" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -130,7 +143,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?analog computer" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
@@ -140,7 +153,7 @@
             </a>
           </div>
           <div class="col-md-3 mt-4">
-            <a href="https://www.fontsquirrel.com/">
+            <a href="#">
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500? digital" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
