--- a/Jenis.html
+++ b/Jenis.html
@@ -157,7 +157,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <a href="Siskom/index.html"><img src="images/il.svg" alt="" style="max-width: 100%;"></a>
+              <a href="/index.html"><img src="images/il.svg" alt="" style="max-width: 100%;"></a>
             </div>
           </div>
         </div>
