--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -110,7 +110,7 @@
                     </p>
                 </div>
                     <div class="col-md-6 p-3 ">
-                        <a href="/index.html">
+                        <a href="/home.html">
                             <img src="images/gc.svg" alt="" style="max-width: 100%;">
                         </a>
                     </div>
