--- a/Komponen.html
+++ b/Komponen.html
@@ -53,7 +53,7 @@
                     </div>
                   </div>
                   <div>
-                    <a href="/index.html" class="btn btn-outline-warning shadow" style="background-color: rgba(0, 0, 0, 0.329);">Balik</a>
+                    <a href="/home.html" class="btn btn-outline-warning shadow" style="background-color: rgba(0, 0, 0, 0.329);">Balik</a>
                     <a class="btn btn-outline-warning shadow" data-bs-toggle="modal" href="#komponen" role="button" style="background-color: rgba(0, 0, 0, 0.329);">detail</a>
                 </div>
               </div>
