--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="card" style="width: 18rem">
                 <img src="https://source.unsplash.com/900x500?electronics difference" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Perdedaan</h5>
+                  <h5 class="card-title">Perbedaan</h5>
                   <p class="card-text">Mikrokontroler adalah perangkat pemrosesan (CPU, ROM, RAM, EEPROM, I/O) ...</p>
                   <a href="/Siskom/Perbedaan" class="btn btn-warning">Detail</a>
                 </div>
