--- a/Komponen.html
+++ b/Komponen.html
@@ -11,53 +11,49 @@
 
     <title>Komponen</title>
   </head>
-  <body >
-
+  <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning shadow-sm fixed-top  mb-5 j">
-      <div class="container " style="font-family: 'Fuzzy Bubbles', cursive">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning shadow-sm fixed-top mb-5 j">
+      <div class="container" style="font-family: 'Fuzzy Bubbles', cursive">
         <a class="navbar-brand" href="#">Komponen</a>
       </div>
     </nav>
-    <br>
+    <br />
     <!-- end -->
-
-
-
 
     <!-- Awal Komponen  -->
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <div class="card bg-light text-dark ">
+          <div class="card bg-light text-light">
             <img src="https://source.unsplash.com/1000x400?components electronic" class="card-img" alt="..." />
-            <div class="card-img-overlay ">
-              <h1 class="card-title shadow sm p-2 mb-1 bg-dark p-2 " style="--bs-bg-opacity: 0.3">Komponen Mikrokontroler</h1>
-                  <div class="modal fade" id="komponen" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalToggleLabel">Komponen</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <h1>Apa saja komponen dalam Micro controller</h1>
-                          <p>Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem. Struktur komponen mikrokontroler ini saling berkaitan agar dapat menerima dan menjalankan perintah program dari pengguna atau pembuatnya. Berikut
-                            adalah bagian bagian dari suatu mikrokontroler
-                          </p>
-                        </div>
-                        <div class="modal-footer">
-                          <button class="btn btn-warning" data-bs-target="#" data-bs-toggle="modal">Balik</button>
-                          
-                        </div>
-                      </div>
+            <div class="card-img-overlay">
+              <h1 class="card-title shadow sm p-2 mb-1 bg-dark p-2" style="--bs-bg-opacity: 0.3">Komponen Mikrokontroler</h1>
+              <div class="modal fade" id="komponen" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalToggleLabel">Komponen</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <h1>Apa saja komponen dalam Micro controller</h1>
+                      <p>
+                        Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem. Struktur komponen mikrokontroler ini saling berkaitan agar dapat menerima dan menjalankan perintah program dari pengguna atau pembuatnya.
+                        Berikut adalah bagian bagian dari suatu mikrokontroler
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button class="btn btn-warning" data-bs-target="#" data-bs-toggle="modal">Balik</button>
                     </div>
                   </div>
-                  <div>
-                    <a href="/Siskom/home.html" class="btn btn-outline-warning shadow" style="background-color: rgba(0, 0, 0, 0.329);">Balik</a>
-                    <a class="btn btn-outline-warning shadow" data-bs-toggle="modal" href="#komponen" role="button" style="background-color: rgba(0, 0, 0, 0.329);">detail</a>
                 </div>
               </div>
+              <div>
+                <a href="/Siskom/home.html" class="btn btn-outline-warning shadow" style="background-color: rgba(0, 0, 0, 0.329)">Balik</a>
+                <a class="btn btn-outline-warning shadow" data-bs-toggle="modal" href="#komponen" role="button" style="background-color: rgba(0, 0, 0, 0.329)">detail</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -103,7 +99,7 @@
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?timer computer" class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
-                  <h3 class="card-title shadow sm p-3 mb-1 bg-dark p-2" style="--bs-bg-opacity: 0.3">Timer dan Counter</h3>
+                  <h3 class="card-title shadow sm p-3 mb-1 bg-dark p-1" style="--bs-bg-opacity: 0.3">Timer dan Counter</h3>
                 </div>
               </div>
             </a>
@@ -113,7 +109,7 @@
               <div class="card bg-dark text-white" style="box-shadow: 1px 1px 1px white">
                 <img src="https://source.unsplash.com/1200x500?computer Port " class="card-img-top img-fluid" alt="..." />
                 <div class="card-img-overlay">
-                  <h3 class="card-title shadow sm p-3 mb-1 bg-dark p-2" style="--bs-bg-opacity: 0.3">Port INPUT / Output</h3>
+                  <h3 class="card-title shadow sm p-3 mb-1 bg-dark p-1" style="--bs-bg-opacity: 0.3">Port INPUT / Output</h3>
                 </div>
               </div>
             </a>
@@ -169,13 +165,11 @@
     </section>
     <!-- end -->
 
-
     <!-- animasi -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-  
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
