--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -122,7 +122,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 p-3 " data-aos= "zoom-out" data-aos-delay="350">
-                        <a href="/home.html">
+                        <a href="/Siskom/home.html">
                             <img src="images/gc.svg" alt="" style="max-width: 100%;">
                         </a>
                 </div>
