--- a/Komponen.html
+++ b/Komponen.html
@@ -33,11 +33,11 @@
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalToggleLabel">Komponen</h5>
+                      <h5 class="modal-title" id="exampleModalToggleLabel" style="color: black; opacity: 1;">Komponen</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
-                      <h1>Apa saja komponen dalam Micro controller</h1>
+                    <div class="modal-body" style="color: black;">
+                      <h1>Apa saja komponen dalam Micro controller ??</h1>
                       <p>
                         Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem. Struktur komponen mikrokontroler ini saling berkaitan agar dapat menerima dan menjalankan perintah program dari pengguna atau pembuatnya.
                         Berikut adalah bagian bagian dari suatu mikrokontroler
