--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -14,6 +14,16 @@
     <title>Perbedaan</title>
   </head>
   <body>
+        <!-- navbar -->
+    <section>
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning shadow-sm fixed-top mb-5 j">
+          <div class="container" style="font-family: 'Fuzzy Bubbles', cursive">
+            <a class="navbar-brand p-2 fs-4" href="#">Perbedaan </a>
+            <a href="/Siskom/home.html" class="btn btn-outline-warning shadow" style="background-color: rgba(0, 0, 0, 0.329)">Balik</a>
+          </div>
+        </nav>
+      </section>
+      <!-- end -->
     <!-- awal 1 -->
     <section>
         <div class="container">
