--- a/Jenis.html
+++ b/Jenis.html
@@ -253,5 +253,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- js lightbox -->
     <script src="js/lightbox-plus-jquery.min.js"></script>
+    <!-- dark mode -->
+    <script src="js/darkmode-js.js"></script>
+    <script>
+      new Darkmode({
+        bottom: '32px',
+        right: '32px',
+        time: '0.5s',
+        label: '🌓'
+      }).showWidget();
+    </script>
   </body>
 </html>
