Perbaikan Dark mode text perbedaan

--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -25,7 +25,7 @@
       </section>
       <!-- end -->
     <!-- awal 1 -->
-    <section>
+    <section class="mt-5">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -111,7 +111,7 @@
                 <div class="col-md-4" data-aos= "zoom-out-down" data-aos-delay="350">
                     <img src="images/kubik.svg" alt="" style="max-width: 100%;">
                 </div>
-                <div class="col-md-8" data-aos= "flip-right" data-aos-delay="350">
+                <div class="col-md-8" data-aos= "flip-right" data-aos-delay="350"  style="color: rgb(141, 140, 140);">
                     <h1 class="fs-2">Power </h1>
                     <p class="fs-4">Jika dilihat dari sumber daya yang digunakan, Mikrokontroler menggunakan daya yang lebih kecil dan mempunyai teknologi power saving. Mikroprosesor karena komputasi yang kompleks, maka sumber daya yang diperlukan jauh lebih besar terutama jika terdapat banyak perangkat eksternal tambahan.
                     </p>
@@ -125,7 +125,7 @@
     <section  style="background-color: #F7EEC7;">
         <div class="container">
             <div class="row justify-content-center text-center" data-aos= "zoom-in-left" data-aos-delay="350">
-                <div class="col-md-6 ">
+                <div class="col-md-6 " style="color: rgb(141, 140, 140);">
                     <h1 class="fs-1">Kinerja
                     </h1>
                     <p class="fs-3">Kecepatan Proses Mikrokontroler saat ini berkisar antara 1 Mhz - 300 Mhz, sedangkan Mikroprosesor, kecepatannya berada pada 1Ghz - 4Ghz. Kecepatan proses ini akan terus berkembang seiring berkembang pesatnya teknologi SoC (System On Chip).
