--- a/Jenis.html
+++ b/Jenis.html
@@ -138,7 +138,7 @@
                               <li>Converter</li>
                               <li>Encoder dan Decoder</li>
                               <li>ADC ( Analog Digital Converter )</li>
-                              <li>Flip Flop1</li>
+                              <li>Flip Flop</li>
                             </ul>
                           </div>
                           <div class="modal-footer">
@@ -173,7 +173,7 @@
                               <li>Converter</li>
                               <li>Encoder dan Decoder</li>
                               <li>ADC ( Analog Digital Converter )</li>
-                              <li>Flip Flop2</li>
+                              <li>Flip Flop</li>
                             </ul>
                           </div>
                           <div class="modal-footer">
@@ -209,7 +209,7 @@
                               <li>Converter</li>
                               <li>Encoder dan Decoder</li>
                               <li>ADC ( Analog Digital Converter )</li>
-                              <li>Flip Flop3</li>
+                              <li>Flip Flop</li>
                             </ul>
                           </div>
                           <div class="modal-footer">
