revisi gambar, dark mode, home

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="row justify-content-center text-center mb-5 p-4">
             <div class="col-md-4 mb-3">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?Cpu" class="card-img-top" alt="..." />
+                <img src="https://source.unsplash.com/900x500?Microcontroller" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Pengertian</h5>
                   <p class="card-text">Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas ...</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?cpu type" class="card-img-top" alt="..." />
+                <img src="https://tse2.mm.bing.net/th?id=OIP.uryiLcwLiHaXs4G9TUUAcAHaCn&pid=Api&P=0&w=473&h=167" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Jenis - Jenis || Fungsi</h5>
                   <p class="card-text">Adapun jenis-jenis serta fungsi dari Mikrokontroler sebagai berikut</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?electronics difference" class="card-img-top" alt="..." />
+                <img src="https://tse2.mm.bing.net/th?id=OIP.JTULKX0N-OAAeOocFU0rpQHaEK&pid=Api&P=0&w=300&h=168" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Perbedaan</h5>
                   <p class="card-text">Mikrokontroler adalah perangkat pemrosesan (CPU, ROM, RAM, EEPROM, I/O) ...</p>
@@ -115,7 +115,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?electronics excess" class="card-img-top" alt="..." />
+                <img src="https://miro.medium.com/max/1200/1*4TCjvVsd91hdeh0h1pKjiQ.jpeg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Kelebihan dan Kekurangan</h5>
                   <p class="card-text">Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem.</p>
@@ -187,8 +187,8 @@
     <script src="js/darkmode-js.js"></script>
     <script>
       new Darkmode({
-        bottom: '32px',
-        right: '32px',
+        bottom: '41%',
+        right: '1%',
         time: '0.5s',
         label: '🌓'
       }).showWidget();
