--- a/Jenis.html
+++ b/Jenis.html
@@ -122,7 +122,7 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="https://source.unsplash.com/1200x500?CPU" class="d-block w-100" alt="Hallo" />
+                  <img src="https://community.arm.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-19-89/4073.arm_2D00_embedded_2D00_blog.jpg" class="d-block w-100" alt="Hallo" />
                   <div class="card-img-overlay shadow-lg border border-3 border-dark">
                     <div class="modal fade" id="fungsi1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                       <div class="modal-dialog modal-dialog-centered justify-content-center">
@@ -157,7 +157,7 @@
                   </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="https://source.unsplash.com/1200x500?computer" class="d-block w-100" alt="..." />
+                  <img src="https://ak2.picdn.net/shutterstock/videos/12422252/thumb/1.jpg" class="d-block w-100" alt="..." />
                   <div class="card-img-overlay justify-content-center shadow-lg border border-3 border-dark">
                     <div class="modal fade" id="fungsi2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                       <div class="modal-dialog modal-dialog-centered justify-content-center">
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="carousel-item">
-                  <img src="https://source.unsplash.com/1200x500?RAM" class="d-block w-100" alt="..." />
+                  <img src="https://tse3.mm.bing.net/th?id=OIP.o9RWJM9RYAlB_DsUmpTXMAHaEK&pid=Api&P=0&w=303&h=170" class="d-block w-100" alt="..." />
                   <div class="card-img-overlay justify-content-center shadow-lg border border-3 border-dark">
                     <div class="modal fade" id="fungsi3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                       <div class="modal-dialog modal-dialog-centered justify-content-center">
@@ -253,15 +253,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- js lightbox -->
     <script src="js/lightbox-plus-jquery.min.js"></script>
-    <!-- dark mode -->
-    <script src="js/darkmode-js.js"></script>
-    <script>
-      new Darkmode({
-        bottom: '32px',
-        right: '32px',
-        time: '0.5s',
-        label: '🌓'
-      }).showWidget();
-    </script>
+
   </body>
 </html>
