--- a/Jenis.html
+++ b/Jenis.html
@@ -244,6 +244,8 @@
         </div>
       </div>
     </section>
+    <!-- dark mode -->
+    <script src="js/darkmode-js.js"></script>
     <!-- Animasi -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
