--- a/home.html
+++ b/home.html
@@ -178,6 +178,8 @@
         </div>
       </div>
     </section>
+    <!-- dark mode -->
+    <script src="js/darkmode-js.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
