--- a/Jenis.html
+++ b/Jenis.html
@@ -246,6 +246,14 @@
     </section>
     <!-- dark mode -->
     <script src="js/darkmode-js.js"></script>
+    <script>
+      new Darkmode({
+        bottom: '41%',
+        right: '1%',
+        time: '0.5s',
+        label: '🌓'
+      }).showWidget();
+    </script>
     <!-- Animasi -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
