--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -149,6 +149,14 @@
     </script>
     <!-- dark mode -->
     <script src="js/darkmode-js.js"></script>
+    <script>
+        new Darkmode({
+          bottom: '41%',
+          right: '1%',
+          time: '0.5s',
+          label: '🌓'
+        }).showWidget();
+      </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
