--- a/home.html
+++ b/home.html
@@ -180,6 +180,14 @@
     </section>
     <!-- dark mode -->
     <script src="js/darkmode-js.js"></script>
+    <script>
+      new Darkmode({
+        bottom: '41%',
+        right: '1%',
+        time: '0.5s',
+        label: '🌓'
+      }).showWidget();
+    </script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
