--- a/Perbedaan.html
+++ b/Perbedaan.html
@@ -124,8 +124,8 @@
     <!-- awal 6 -->
     <section  style="background-color: #F7EEC7;">
         <div class="container">
-            <div class="row justify-content-center text-center" data-aos= "zoom-in-left" data-aos-delay="350">
-                <div class="col-md-6 " style="color: rgb(141, 140, 140);">
+            <div class="row justify-content-center text-center" >
+                <div class="col-md-6 " style="color: rgb(141, 140, 140);" data-aos= "zoom-in-left" data-aos-delay="350">
                     <h1 class="fs-1">Kinerja
                     </h1>
                     <p class="fs-3">Kecepatan Proses Mikrokontroler saat ini berkisar antara 1 Mhz - 300 Mhz, sedangkan Mikroprosesor, kecepatannya berada pada 1Ghz - 4Ghz. Kecepatan proses ini akan terus berkembang seiring berkembang pesatnya teknologi SoC (System On Chip).
