--- a/home.html
+++ b/home.html
@@ -26,6 +26,9 @@
               <a class="nav-link" href="#materi">Materi</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://docs.google.com/presentation/d/1MOcmJymoxs_ZO11m2iU3uVux6DAGIBKs3vRR9y3fdxM/edit?usp=sharing">PPT</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#penutupan">Penutupan</a>
             </li>
           </ul>
