--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3" data-aos= "fade-left" data-aos-delay="350">
+            <div class="col-md-4 mb-3" data-aos= "flip-down" data-aos-delay="350">
               <div class="card" style="width: 18rem">
                 <img src="https://source.unsplash.com/900x500?cpu type" class="card-img-top" alt="..." />
                 <div class="card-body">
@@ -111,13 +111,13 @@
               <div class="card" style="width: 18rem">
                 <img src="https://source.unsplash.com/900x500?electronics difference" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Perdedaan</h5>
+                  <h5 class="card-title">Perbedaan</h5>
                   <p class="card-text">Mikrokontroler adalah perangkat pemrosesan (CPU, ROM, RAM, EEPROM, I/O) ...</p>
                   <a href="/Siskom/Perbedaan" class="btn btn-warning">Detail</a>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3" data-aos= "fade-up-left" data-aos-delay="350">
+            <div class="col-md-4 mb-3" data-aos= "zoom-out-down" data-aos-delay="350">
               <div class="card" style="width: 18rem">
                 <img src="https://source.unsplash.com/900x500?electronics excess" class="card-img-top" alt="..." />
                 <div class="card-body">
