--- a/home.html
+++ b/home.html
@@ -121,7 +121,7 @@
                 <img src="https://miro.medium.com/max/1200/1*4TCjvVsd91hdeh0h1pKjiQ.jpeg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Kelebihan dan Kekurangan</h5>
-                  <p class="card-text">Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem.</p>
+                  <p class="card-text"> Selain memiliki kelebihan Microcontroller juga memiliki beberapa kekurangan sebagai berikut:</p>
                   <div class="modal fade" id="kelebihan" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                     <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content">
