--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="row justify-content-center text-center mb-5 p-4">
             <div class="col-md-4 mb-3"  data-aos= "fade-right" data-aos-delay="350">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?Cpu" class="card-img-top" alt="..." />
+                <img src="https://source.unsplash.com/900x500?Microcontroller" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Pengertian</h5>
                   <p class="card-text">Pengertian Mikrokontroler merupakan perangkat komputer yang dikemas ...</p>
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-4 mb-3" data-aos= "flip-down" data-aos-delay="350">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?cpu type" class="card-img-top" alt="..." />
+                <img src="https://tse2.mm.bing.net/th?id=OIP.uryiLcwLiHaXs4G9TUUAcAHaCn&pid=Api&P=0&w=473&h=167" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Jenis - Jenis || Fungsi</h5>
                   <p class="card-text">Adapun jenis-jenis serta fungsi dari Mikrokontroler sebagai berikut</p>
@@ -109,7 +109,7 @@
             </div>
             <div class="col-md-4 mb-3" data-aos= "fade-up-right" data-aos-delay="350">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?electronics difference" class="card-img-top" alt="..." />
+                <img src="https://tse2.mm.bing.net/th?id=OIP.JTULKX0N-OAAeOocFU0rpQHaEK&pid=Api&P=0&w=300&h=168" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Perbedaan</h5>
                   <p class="card-text">Mikrokontroler adalah perangkat pemrosesan (CPU, ROM, RAM, EEPROM, I/O) ...</p>
@@ -119,10 +119,10 @@
             </div>
             <div class="col-md-4 mb-3" data-aos= "zoom-out-down" data-aos-delay="350">
               <div class="card" style="width: 18rem">
-                <img src="https://source.unsplash.com/900x500?electronics excess" class="card-img-top" alt="..." />
+                <img src="https://miro.medium.com/max/1200/1*4TCjvVsd91hdeh0h1pKjiQ.jpeg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Kelebihan dan Kekurangan</h5>
-                  <p class="card-text">Mikrokontroler mempunyai bagian bagian yang membentuk satu kesatuan sistem.</p>
+                  <p class="card-text">Selain memiliki kelebihan Microcontroller juga memiliki beberapa kekurangan sebagai berikut.</p>
                   <div class="modal fade" id="kelebihan" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                     <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content">
